--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@
 
 .layout{
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 250px 5fr;
+    grid-template-rows: 200px;
     height: 100vh;
 }
 
@@ -19,6 +19,83 @@
     box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.5);
     position: relative;
     z-index: 9;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    font-weight: 700;
+}
+
+.header *{
+    font-weight: inherit;
+}
+
+
+input{
+    border-radius: 20px;
+    border: none;
+    background-color: lightgray;
+    display: flex;
+    width: 80%;
+    height: 30px;
+}
+
+.search-input{
+    display: flex;
+    justify-content: left;
+    margin-left: 40px;
+    align-items: center;
+}
+
+.profile-hero{
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    margin-right: 60px;
+}
+
+.profile-hero > .profile-pic{
+    height: 50px;
+    width: auto;
+    margin-right: 15px;
+}
+
+.greetings{
+    display: flex;
+    grid-template-columns: 1fr 2fr;
+    justify-content: start;
+    align-items: center;
+    margin-left: 60px;
+    margin-bottom: 20px;
+}
+
+.greetings > .profile-pic{
+    height: 60px;
+    width: auto;
+    margin-right: 15px;
+}
+
+.greetings > div{
+    flex-direction: column; 
+}
+
+.personal > p{
+    font-size: 20px;
+}
+
+.header-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+.header-buttons > button{
+    background-color: blue;
+    width: 100px;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    color: white;
 }
 
 .sidebar{
@@ -35,7 +112,7 @@
 .tittle{
     font-size: 24px;
     font-weight: 700;
-    margin: 25px 0px;
+    margin-top: 60px;
     align-self: flex-start;
     display: flex;
     align-items: center;  
@@ -66,4 +143,48 @@ nav{
 
 .main-content{
     background: lightgray;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 100%;
+    font-weight: 700;
+}
+
+.main-content *{
+    font-weight: inherit;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+
+.projects{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.card-style{
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 3px 4px -4px rgba(0, 0, 0, 0.5);
+}
+
+.project{
+    width: 350px;
+    height: 200px;
+    border-left: 10px solid orange;
+}
+
+.c2{
+    gap: 20px;
+}
+
+.announce{
+    width: auto;
+    height: 50%;
 }
