--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
+    color: #fed7aa;
   }
 
 .layout{
@@ -14,7 +15,7 @@
 
 
 .header{
-    background: white;
+    background: #7c2d12;
     grid-column: 2 / 3;
     box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.5);
     position: relative;
@@ -90,7 +91,7 @@ input{
 }
 
 .header-buttons > button{
-    background-color: blue;
+    background: radial-gradient(#7c2d12, #c2410c);
     width: 100px;
     height: 40px;
     border-radius: 20px;
@@ -99,7 +100,7 @@ input{
 }
 
 .sidebar{
-    background: linear-gradient(to top, lightblue, blue);
+    background: linear-gradient(to top, #c2410c, #7c2d12);
     position: relative;
     z-index: 10;
     grid-row: 1 / 3;
@@ -112,7 +113,7 @@ input{
 .tittle{
     font-size: 24px;
     font-weight: 700;
-    margin-top: 60px;
+    margin-top: 40px;
     align-self: flex-start;
     display: flex;
     align-items: center;  
@@ -131,6 +132,7 @@ nav{
 }
 
 .nav-a{
+    margin-top: -30px;
     margin-bottom: 60px;
 }
 
@@ -142,7 +144,7 @@ nav{
 }
 
 .main-content{
-    background: lightgray;
+    background: #431407;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 100%;
@@ -169,7 +171,7 @@ nav{
 }
 
 .card-style{
-    background-color: white;
+    background-color: #c2410c;
     border-radius: 10px;
     box-shadow: 0 3px 4px -4px rgba(0, 0, 0, 0.5);
 }
@@ -178,13 +180,67 @@ nav{
     width: 350px;
     height: 200px;
     border-left: 10px solid orange;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px 20px;
+}
+
+.project-text{
+    width: 95%;
+    font-weight: 400;
+    font-size: 16px;
+    flex-wrap: wrap;
+    margin-bottom: auto;
+}
+.project-icons{
+    display: flex;
+    justify-content: end;
+}
+
+.project-icons > img{
+    margin-right: 7px;
 }
 
 .c2{
     gap: 20px;
+    padding-right: 20px;
 }
 
-.announce{
+.announce,
+.trending{
     width: auto;
     height: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 20px;
 }
+
+.trending{
+    height: auto;
+}
+
+
+.separation{
+    border-bottom: 1px solid lightgrey;
+    margin: 20px 0px 20px 0px;
+}
+
+.profiles{
+    padding: 10px 20px;
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.profiles > .profile-pic{
+    height: 50px;
+    width: auto;
+    margin-right: 15px;
+}
+
+
+.subproject{
+    font-weight: 400;
+    font-size: 14px;
+}
+
